syntax = "proto3";

option go_package = "./order_proto_gen";

import "google/protobuf/timestamp.proto";
import "order_metadata.proto";

message GetMyOrdersRequest {
  int64 limit = 1;
  int64 page = 2;
  optional string status = 3;
  optional string keyword = 4;
  int64 user_id = 5;
}

message GetMyOrdersResponse {
  repeated MyOrdersResponse data = 1;
  OrderMetadata metadata = 2;
}

message MyOrdersResponse {
  // info of supplier
  int64 supplier_id = 1;
  string supplier_name = 2;
  string supplier_thumbnail = 3;

  // info products
  string product_id = 4;
  string product_variant_id = 5;
  string product_name = 6;
  string product_variant_name = 7;
  int64 quantity = 8;
  double unit_price = 9;
  double total_price = 10;
  double discount_amount = 11;
  double tax_amount = 12;
  double shipping_fee = 13;
  string status = 14;

  // Used for detail when click into one order item
  string tracking_number = 15;
  string shipping_address = 16;
  string shipping_method = 17;
  string recipient_name = 18;
  string recipient_phone = 19;
  google.protobuf.Timestamp estimated_delivery_date = 20;
  optional google.protobuf.Timestamp actual_delivery_date = 21;
  optional string notes = 22;
  optional string cancelled_reason = 23;

  // additional
  string order_item_id = 24;
}